--- a/GameWebDemo/GameWebDemo.csproj
+++ b/GameWebDemo/GameWebDemo.csproj
@@ -238,6 +238,8 @@
     <Content Include="Views\Account\index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Msg\Index.cshtml" />
+    <Content Include="Views\Msg\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
