--- a/GameWebDemo/GameWebDemo.csproj
+++ b/GameWebDemo/GameWebDemo.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Msg\Detail.cshtml" />
     <Content Include="Views\Msg\Edit.cshtml" />
     <Content Include="Views\Msg\Create.cshtml" />
+    <Content Include="Views\Home\news.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
